# SCPA-project

./: .gitignore  Makefile  README.md  build.sh  cuda.sh  exec  exec_omp  find_thr_omp.sh  omp.sh  performance-mixed.csv  performance.csv  read_matrix_market  reader.c  reconstruct.c  speedup_cuda.sh  speedup_omp.sh  test_cuda.sh  test_omp.sh
cose/: generate_vectors.c  todo.md
cuda/: CMakeLists.txt  Makefile  performance.csv
cuda/lib/: csr.h  csr_cuda.h  utils.h
cuda/src/: csr.c  csr_cuda.cu  ellpack.c  hll.c  hll_cuda.cu  main.cu  matrix_operations.c  matrix_operations.cu  mtx_reader.c  performance.c  res_utils.cu  vector_generator.c
include/: csr.h  reader.h
lib/: csr.h  vector_reader.h
openmp/: Makefile
openmp/lib/: csr.h  matrix_operations.h  utils.h  vector_generator.h
openmp/src/: csr.c  ellpack.c  hll.c  main.c  matrix_operations.c  mtx_reader.c  performance.c  res_utils.c
results/: best_thread_by_performance.py  best_thread_by_speedup.py  graph_MedianGF_omp.py  graph_builder_CSR_compare.py  graph_builder_median_GF.py  graph_speedup_CPU_GPU.py  performance-CSR-warp.csv  performance-CSR.csv  performance-CUDA-1024.csv  performance-CUDA-128.csv  performance-CUDA-256.csv  performance-CUDA-512.csv  performance-OMP-17.csv  performance-per-thread.csv  speedup-CUDA-1024.csv  speedup-CUDA-128.csv  speedup-CUDA-256.csv  speedup-CUDA-512.csv  speedup-OMP-17.csv  speedup-per-thread.csv  speedup_CPU_GPU.csv
src/: csr.c  csr_cuda.cu  generate_vectors.c  main.c  matrix_operations.c  reader.c  vector_reader.c
